00-loose-cert-rbac-policy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rce
