02-cert-issuer-rbac-policy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rce
