06-priv-daemonset.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mallory  
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: mallory
  namespace: mallory
  labels:
    k8s-app: mallory
spec:
  selector:
    matchLabels:
      name: mallory
  template:
    metadata:
      labels:
        name: mallory
    spec:
      tolerations:
      # this toleration is to have the daemonset runnable on master nodes
      # remove it if your masters can't run pods
      - key: node-role.kubernetes.io/master
        effect: NoSchedule
      containers:
      - name: mallory
        image: debian:buster-slim
        command: ["sleep 10000"]
        volumeMounts:
        - name: host
          mountPath: /host
          readOnly: false
      volumes:
      - name: host
        hostPath:
          path: /
