02-rce-deployment-better.yaml
# apiVersion: v1
# kind: Namespace
# metadata:
#   name: rce
# ---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rce
  namespace: rce 
spec:
  selector:
    matchLabels:
      app: rce
  template:
    metadata:
      labels:
        app: rce
      # annotations:
      #   container.apparmor.security.beta.kubernetes.io/go-rce: runtime/default
      #   seccomp.security.alpha.kubernetes.io/pod: runtime/default
    spec:
      containers:
      - name: go-rce
        imagePullPolicy: Always
        image: 101e/go-rce:debian
        #image: 101e/go-rce:distroless-signed@sha256:db84f84bdb32798fb3b109ac028db2a53573cbff9f305c51045cb80db674d6a2
        resources:
          limits:
            memory: 128Mi
            cpu: 100m
        ports:
        - containerPort: 8080
        securityContext:
          runAsUser: 1002
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - AUDIT_WRITE
            - CHOWN
            - DAC_OVERRIDE
            - FOWNER
            - FSETID
            - KILL
            - MKNOD
            - NET_BIND_SERVICE
            - NET_RAW
            - SETFCAP
            - SETGID
            - SETPCAP
            - SETUID
            - SYS_CHROOT
          privileged: false
          readOnlyRootFilesystem: true
          runAsNonRoot: true
      automountServiceAccountToken: false
  strategy: {}
---
apiVersion: v1
kind: Service
metadata:
  name: rce 
  namespace: rce
spec:
  selector:
    app: rce
  ports:
  - name: go-rce
    protocol: TCP
    port: 8080
    targetPort: 8080
  type: LoadBalancer
---
